--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.ShareDetailActivity"/>
+        <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.ChatActivity" />
         <activity android:name=".activity.PeopleProfileActivity" />
         <activity android:name=".activity.MyPublishActivity" />
