评论，点赞等消息提醒

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.ShareDetailActivity"/>
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.ChatActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".activity.ChatActivity"/>
         <activity android:name=".activity.PeopleProfileActivity" />
         <activity android:name=".activity.MyPublishActivity" />
         <activity android:name=".activity.ShareActivity" />
