--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation files('libs\\activation.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -117,4 +118,7 @@ dependencies {
 
     //tablelayout
     implementation 'com.google.android.material:material:1.2.1'
+
+    //视频缓存 边播边存
+    implementation 'com.danikula:videocache:2.7.1'
 }
