--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,4 +150,5 @@ dependencies {
     implementation 'com.amap.api:location:5.2.0'
     implementation 'com.amap.api:map2d:6.0.0'
     implementation 'com.amap.api:search:7.7.0'
+    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
 }
